  24 bytes. Submitted by Roger Burrows. (VRI)

2011-09-13
- vdi/vdi_line.c: Fix the minimal width of arrow heads. Contributed by Eero
  Tamminen. (VRI)
- aes/gemgraf.c aes/gemgraf.h desk/aesbind.h desk/desk1.c desk/deskapp.c
  desk/deskapp.h desk/deskdir.c desk/deskfpd.c desk/deskfun.c desk/deskgraf.c
  desk/deskgraf.h desk/deskgsx.c desk/deskinf.c desk/deskinf.h desk/deskins.c
  desk/deskobj.c desk/deskpro.c desk/deskwin.c desk/gembind.c desk/taddr.c
  include/taddr.h: Static cleanup. Contributed by Eero Tamminen. (VRI)

2011-09-16
- bios/bios.c bios/lineainit.c bios/lineavars.h bios/screen.c vdi/vdi_defs.h:
  Declare Line A stuff in lineavars.h header instead of in several C-files.
  Contributed by Eero Tamminen. (VRI)
- aes/gemasync.c aes/gemflag.c aes/struct.h: Fix EVB structure e_pd member type.
  Contributed by Eero Tamminen. (VRI)
- bios/kprint.c include/doprintf.h include/string.h util/date.c util/doprintf.c
  util/dumpkbd.c util/string.c: Add a new include/doprintf.h header for
  util/doprintf.c. Contributed by Eero Tamminen. (VRI)

2011-09-19
- aes/gemwmlib.c: Fixed array out of bounds. (VRI)
- bdos/fsdir.c: Fixed crash when calling Ddelete() or Fattrib() with an invalid
  drive. (VRI)
- bdos/fsdir.c: Fixed potential uninitialized variable. (VRI)
- bios/mfp.c bios/screen.c bios/sound.c tools/genctables.awk: Use static const
  instead of const static for standard complicance. (VRI)
- cli/command.c: Fixed no-op in rename command when the destination file is the
  same as the source file. (VRI)
- vdi/vdi_fill.c: Use static void instead of void static for standard
  complicance. (VRI)

2011-09-20
- bdos/console.c: Fixed backspace key in EmuCON with 8-bit characters. (VRI)
- vdi/vdi_line.c: Fast, full precision square root. Contributed by David
  Savinkoff. (VRI)

2011-09-22
- Makefile: Renamed the ARAnyM ROM to emutos-aranym.img. (VRI)
- Makefile: Changed the default target to "help". (VRI)
- Makefile: Use the VMA_T* variables in the help message. (VRI)